<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button7"
            style="@style/grid_button_style"
            android:text="@string/science_11"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button8"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button8"
            style="@style/grid_button_style"
            android:text="@string/management_11"
            app:layout_constraintLeft_toRightOf="@+id/button7"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/button10"
            style="@style/grid_button_style"
            android:text="@string/humanities_11"
            
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@id/button8" />

        <Button
            android:id="@+id/button9"
            style="@style/grid_button_style"
            android:text="@string/science_12"
            
            app:layout_constraintLeft_toRightOf="@+id/button7"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/button10"/>

        <Button
            android:id="@+id/button13"
            style="@style/grid_button_style"
            android:text="@string/management_12"
            
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@id/button10" />

        <Button
            android:id="@+id/button14"
            style="@style/grid_button_style"
            android:text="@string/humanities_12"
            
            app:layout_constraintLeft_toRightOf="@+id/button7"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/button13" />

        <Button
            android:id="@+id/button17"
            style="@style/grid_button_style"
            android:text="@string/bba"
            
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@id/button13" />

        <Button
            android:id="@+id/button18"
            style="@style/grid_button_style"
            android:text="@string/civil_engineering"
            
            android:enabled="false"
            app:layout_constraintLeft_toRightOf="@+id/button7"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/button17" />

        <Button
            android:id="@+id/button19"
            style="@style/grid_button_style"
            android:text="@string/bachelors_in_law"
            
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@id/button17" />

        <Button
            android:id="@+id/button20"
            style="@style/grid_button_style"
            android:text="@string/it"
            
            android:enabled="false"
            app:layout_constraintLeft_toRightOf="@+id/button7"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/button19" />
        <Button
            android:id="@+id/button21"
            style="@style/grid_button_style"
            android:text="@string/old_is_gold"
            
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button19"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />


    </android.support.constraint.ConstraintLayout>

</RelativeLayout>